--- a/TrueCam/res/values/strings.xml
+++ b/TrueCam/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="app_name">TrueCam</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-
+	<string name="text_take_pic">Take a picture</string>
 </resources>
